--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
